# ptpython-sessions

./: .gitmodules  pyproject.toml
apeiron.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_apeiron.py
