[tool.poetry]
name = "apeiron"
version = "0.1.0"
description = ""
authors = ["Kevin Zeidler <kzeidler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ptpython = { path = "./lib/ptpython/"}
prompt-toolkit = { path = "./lib/python-prompt-toolkit/"}
pdbpp = "^0.10.2"
ipdb = "^0.13.4"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
